--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.physical_button_example"
+        applicationId "dog.sudo.physical_button_example"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
