--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.physical_button_example">
+    package="dog.sudo.physical_button_example">
    <application
         android:label="physical_button_example"
         android:icon="@mipmap/ic_launcher">
